# dep_checker

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini  update_stdlib_list.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
dep_checker/: __init__.py  __main__.py  _stdlib_list.py  config.py  utils.py
doc-source/: Source.rst  api.rst  autosummary_widths.py  conf.py  contributing.rst  index.rst  license.rst  requirements.txt  sphinx_click_tweak.py  usage.rst
doc-source/_static/: style.css
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: dep_checker.rst
tests/: conftest.py  test_config.py  test_dep_checker.py  test_dep_checker_class.py  test_dep_checker_pyproject.py  test_utils.py
tests/test_config_/: test_configreader_pyproject_toml.yml  test_configreader_setup_cfg_.yml  test_name_mapping_foo__bob_nbar__alice_.yml  test_name_mapping_table_.yml  test_namespace_packages_foo__nbar_.yml  test_namespace_packages_list1_.yml
tests/test_dep_checker_/: test_check_imports.yml  test_check_imports_package.yml  test_cli.txt  test_cli_package.txt  test_cli_package_srcdir.txt  test_with_config_allow_numpy_.yml  test_with_config_allow_numpy_name_mapping_bio_.yml  test_with_config_name_mapping_bio_.yml  test_with_config_name_mapping_bio_namespace_ruamel_.yml  test_with_config_namespace_ruamel_.yml
tests/test_dep_checker_class_/: test_dep_checker.yml  test_dep_checker_package.yml  test_with_config_allow_numpy_.yml  test_with_config_allow_numpy_name_mapping_bio_.yml  test_with_config_name_mapping_bio_.yml  test_with_config_name_mapping_bio_namespace_ruamel_.yml  test_with_config_namespace_ruamel_.yml
tests/test_dep_checker_pyproject_/: test_cli.txt  test_cli_package.txt  test_cli_package_dynamic.txt
