[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "dep_checker"
version = "0.5.0"
description = "Tool to check all requirements are actually required."
readme = "README.rst"
keywords = [ "dependencies", "linter", "pre-commit",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/dep_checker"
"Issue Tracker" = "https://github.com/domdfcoding/dep_checker/issues"
"Source Code" = "https://github.com/domdfcoding/dep_checker"
Documentation = "https://dep_checker.readthedocs.io/en/latest"

[project.scripts]
dep-checker = "dep_checker.__main__:main"
dep_checker = "dep_checker.__main__:main"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
